@@ -1910,7 +1910,8 @@ class _CompareMixin(ColumnOperators):
         operators.eq : (__compare, operators.ne),
         operators.like_op : (__compare, operators.notlike_op),
         operators.ilike_op : (__compare, operators.notilike_op),
-
+        operators.is_ : (__compare, operators.is_),
+        operators.isnot : (__compare, operators.isnot),
     }
 
     def operate(self, op, *other, **kwargs):
